--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,15 +27,14 @@
             <div class="footer">
               <div class="contact">
                 <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
+                  Slimhappy<br />
+                  about me<br />
                 </p>
               </div>
               <div class="contact">
                 <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
+                  <a href="http://github.com/slimhappy/">github.com/slimhappy</a><br />
+                  <a href="http://twitter.com/slimhappy/">twitter.com/slimhappy</a><br />
                 </p>
               </div>
             </div>
